--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.chartpivotoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.chartpivotoptions.yml
@@ -1,31 +1,31 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.ChartPivotOptions
+  - uid: 'excel!Excel.ChartPivotOptions:class'
     summary: |-
       封装数据透视图的选项。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.ChartPivotOptions
     fullName: Excel.ChartPivotOptions
     langs:
       - typeScript
     type: class
     extends:
-      - 'OfficeExtension.ClientObject '
-    package: excel
+      - 'excel!OfficeExtension.ClientObject:class'
+    package: excel!
     children:
-      - excel.Excel.ChartPivotOptions.context
-      - excel.Excel.ChartPivotOptions.load
-      - excel.Excel.ChartPivotOptions.load_1
-      - excel.Excel.ChartPivotOptions.load_2
-      - excel.Excel.ChartPivotOptions.set
-      - excel.Excel.ChartPivotOptions.set_1
-      - excel.Excel.ChartPivotOptions.showAxisFieldButtons
-      - excel.Excel.ChartPivotOptions.showLegendFieldButtons
-      - excel.Excel.ChartPivotOptions.showReportFilterFieldButtons
-      - excel.Excel.ChartPivotOptions.showValueFieldButtons
-      - excel.Excel.ChartPivotOptions.toJSON
-  - uid: excel.Excel.ChartPivotOptions.context
+      - 'excel!Excel.ChartPivotOptions#context:member'
+      - 'excel!Excel.ChartPivotOptions#load:member(1)'
+      - 'excel!Excel.ChartPivotOptions#load:member(2)'
+      - 'excel!Excel.ChartPivotOptions#load:member(3)'
+      - 'excel!Excel.ChartPivotOptions#set:member(1)'
+      - 'excel!Excel.ChartPivotOptions#set:member(2)'
+      - 'excel!Excel.ChartPivotOptions#showAxisFieldButtons:member'
+      - 'excel!Excel.ChartPivotOptions#showLegendFieldButtons:member'
+      - 'excel!Excel.ChartPivotOptions#showReportFilterFieldButtons:member'
+      - 'excel!Excel.ChartPivotOptions#showValueFieldButtons:member'
+      - 'excel!Excel.ChartPivotOptions#toJSON:member(1)'
+  - uid: 'excel!Excel.ChartPivotOptions#context:member'
     summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
@@ -36,17 +36,17 @@ items:
       content: 'context: RequestContext;'
       return:
         type:
-          - excel.Excel.RequestContext
-  - uid: excel.Excel.ChartPivotOptions.load
+          - 'excel!Excel.RequestContext:class'
+  - uid: 'excel!Excel.ChartPivotOptions#load:member(1)'
     summary: 将命令加入队列以加载对象的指定属性。 在读取属性之前，你必须调用“context.sync()”。
     remarks: |-
-      除了此签名之外, 此方法还具有以下签名:
+      除了此签名之外，此方法还具有以下签名：
 
-      `load(option?: string | string[]): Excel.ChartPivotOptions`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。
+      `load(option?: string | string[]): Excel.ChartPivotOptions`-Where 选项是一个逗号分隔的字符串或一个字符串数组，用于指定要加载的属性。
 
-      `load(option?: { select?: string; expand?: string; }): Excel.ChartPivotOptions`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。
+      `load(option?: { select?: string; expand?: string; }): Excel.ChartPivotOptions`-Where 选项。选择是一个用逗号分隔的字符串，用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串，用于指定要加载的导航属性。
 
-      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartPivotOptions`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。
+      `load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.ChartPivotOptions`-仅适用于集合类型。 它类似于前面的签名。 Top 指定结果中可包含的集合项的最大数量。 选项。 skip 指定要跳过且不包含在结果中的项目数。 如果指定了 top 选项，则在跳过指定数目的项目后将启动结果集。
     name: load(option)
     fullName: load(option)
     langs:
@@ -56,15 +56,15 @@ items:
       content: 'load(option?: Excel.Interfaces.ChartPivotOptionsLoadOptions): Excel.ChartPivotOptions;'
       return:
         type:
-          - excel.Excel.ChartPivotOptions
+          - 'excel!Excel.ChartPivotOptions:class'
         description: ''
       parameters:
         - id: option
           description: ''
           type:
-            - excel.Excel.Interfaces.ChartPivotOptionsLoadOptions
-  - uid: excel.Excel.ChartPivotOptions.load_1
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+            - 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface'
+  - uid: 'excel!Excel.ChartPivotOptions#load:member(2)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -74,15 +74,15 @@ items:
       content: 'load(propertyNames?: string | string[]): Excel.ChartPivotOptions;'
       return:
         type:
-          - excel.Excel.ChartPivotOptions
+          - 'excel!Excel.ChartPivotOptions:class'
         description: ''
       parameters:
         - id: propertyNames
-          description: '一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。'
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
-  - uid: excel.Excel.ChartPivotOptions.load_2
-    summary: '将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前, 必须先调用。'
+  - uid: 'excel!Excel.ChartPivotOptions#load:member(3)'
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -92,17 +92,17 @@ items:
       content: 'load(propertyNamesAndPaths?: { select?: string; expand?: string; }): Excel.ChartPivotOptions;'
       return:
         type:
-          - excel.Excel.ChartPivotOptions
+          - 'excel!Excel.ChartPivotOptions:class'
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。'
+          description: 其中，propertyNamesAndPaths 是用逗号分隔的字符串，用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串，用于指定要加载的导航属性。
           type:
             - '{ select?: string; expand?: string; }'
-  - uid: excel.Excel.ChartPivotOptions.set
+  - uid: 'excel!Excel.ChartPivotOptions#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      此方法具有以下附加签名:
+      此方法具有以下附加签名：
 
       `set(properties: Excel.ChartPivotOptions): void`
     name: 'set(properties, options)'
@@ -118,14 +118,14 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: '一个 JavaScript 对象, 其属性的结构 isomorphically 为在其上调用方法的对象的属性。'
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
-            - Interfaces.ChartPivotOptionsUpdateData
+            - 'excel!Excel.Interfaces.ChartPivotOptionsUpdateData:interface'
         - id: options
-          description: '提供一个选项, 以在 properties 对象尝试设置任何只读属性时禁止显示错误。'
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - OfficeExtension.UpdateOptions
-  - uid: excel.Excel.ChartPivotOptions.set_1
+            - 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'excel!Excel.ChartPivotOptions#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
@@ -142,12 +142,12 @@ items:
         - id: properties
           description: ''
           type:
-            - excel.Excel.ChartPivotOptions
-  - uid: excel.Excel.ChartPivotOptions.showAxisFieldButtons
+            - 'excel!Excel.ChartPivotOptions:class'
+  - uid: 'excel!Excel.ChartPivotOptions#showAxisFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示轴字段按钮。 ShowAxisFieldButtons 属性对应于“分析”选项卡（在选择数据透视图时可用）的“字段按钮”下拉列表中的“显示坐标轴字段按钮”命令。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showAxisFieldButtons
     fullName: showAxisFieldButtons
     langs:
@@ -158,11 +158,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartPivotOptions.showLegendFieldButtons
+  - uid: 'excel!Excel.ChartPivotOptions#showLegendFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示图例字段按钮。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showLegendFieldButtons
     fullName: showLegendFieldButtons
     langs:
@@ -173,11 +173,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartPivotOptions.showReportFilterFieldButtons
+  - uid: 'excel!Excel.ChartPivotOptions#showReportFilterFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示报表筛选字段按钮。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showReportFilterFieldButtons
     fullName: showReportFilterFieldButtons
     langs:
@@ -188,11 +188,11 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartPivotOptions.showValueFieldButtons
+  - uid: 'excel!Excel.ChartPivotOptions#showValueFieldButtons:member'
     summary: |-
       指定是否在数据透视图上显示值字段按钮。
 
-      \[[API 集: ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+      \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: showValueFieldButtons
     fullName: showValueFieldButtons
     langs:
@@ -203,8 +203,8 @@ items:
       return:
         type:
           - boolean
-  - uid: excel.Excel.ChartPivotOptions.toJSON
-    summary: '重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPivotOptions 对象是 API 对象, 但`toJSON`方法返回一个无格式的 JavaScript 对象 (类型为`Excel.Interfaces.ChartPivotOptionsData`<!-- -->), 其中包含原始对象中所有已加载的子属性的浅表副本。'
+  - uid: 'excel!Excel.ChartPivotOptions#toJSON:member(1)'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 ChartPivotOptions 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.ChartPivotOptionsData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -214,5 +214,20 @@ items:
       content: 'toJSON(): Excel.Interfaces.ChartPivotOptionsData;'
       return:
         type:
-          - excel.Excel.Interfaces.ChartPivotOptionsData
+          - 'excel!Excel.Interfaces.ChartPivotOptionsData:interface'
         description: ''
+references:
+  - uid: 'excel!OfficeExtension.ClientObject:class'
+    name: OfficeExtension.ClientObject
+  - uid: 'excel!Excel.RequestContext:class'
+    name: RequestContext
+  - uid: 'excel!Excel.ChartPivotOptions:class'
+    name: Excel.ChartPivotOptions
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsLoadOptions:interface'
+    name: Excel.Interfaces.ChartPivotOptionsLoadOptions
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsUpdateData:interface'
+    name: Interfaces.ChartPivotOptionsUpdateData
+  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+    name: OfficeExtension.UpdateOptions
+  - uid: 'excel!Excel.Interfaces.ChartPivotOptionsData:interface'
+    name: Excel.Interfaces.ChartPivotOptionsData
