--- a/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.rangeborderdata.yml
+++ b/docs/docs-ref-autogen/excel_1_1/excel/excel.interfaces.rangeborderdata.yml
@@ -1,23 +1,23 @@
 ### YamlMime:UniversalReference
 items:
-  - uid: excel.Excel.Interfaces.RangeBorderData
-    summary: <span data-ttu-id="b2358-101">描述通过调用 "rangeBorder ()" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="b2358-101">An interface describing the data returned by calling "rangeBorder.toJSON()".</span></span>
+  - uid: 'excel!Excel.Interfaces.RangeBorderData:interface'
+    summary: <span data-ttu-id="455af-101">描述通过调用 "rangeBorder （）" 返回的数据的接口。</span><span class="sxs-lookup"><span data-stu-id="455af-101">An interface describing the data returned by calling "rangeBorder.toJSON()".</span></span>
     name: Excel.Interfaces.RangeBorderData
     fullName: Excel.Interfaces.RangeBorderData
     langs:
       - typeScript
     type: interface
-    package: excel
+    package: excel!
     children:
-      - excel.Excel.Interfaces.RangeBorderData.color
-      - excel.Excel.Interfaces.RangeBorderData.sideIndex
-      - excel.Excel.Interfaces.RangeBorderData.style
-      - excel.Excel.Interfaces.RangeBorderData.weight
-  - uid: excel.Excel.Interfaces.RangeBorderData.color
+      - 'excel!Excel.Interfaces.RangeBorderData#color:member'
+      - 'excel!Excel.Interfaces.RangeBorderData#sideIndex:member'
+      - 'excel!Excel.Interfaces.RangeBorderData#style:member'
+      - 'excel!Excel.Interfaces.RangeBorderData#weight:member'
+  - uid: 'excel!Excel.Interfaces.RangeBorderData#color:member'
     summary: |-
-      <span data-ttu-id="b2358-102">代表\#RRGGBB (例如 "FFA500") 或命名的 HTML 颜色 (例如 "橙色") 的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="b2358-102">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
+      <span data-ttu-id="455af-102">代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。</span><span class="sxs-lookup"><span data-stu-id="455af-102">HTML color code representing the color of the border line, of the form \#RRGGBB (e.g. "FFA500") or as a named HTML color (e.g. "orange").</span></span>
 
-      <span data-ttu-id="b2358-103">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2358-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="455af-103">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="455af-103">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: color
     fullName: color
     langs:
@@ -28,11 +28,11 @@ items:
       return:
         type:
           - string
-  - uid: excel.Excel.Interfaces.RangeBorderData.sideIndex
+  - uid: 'excel!Excel.Interfaces.RangeBorderData#sideIndex:member'
     summary: |-
-      <span data-ttu-id="b2358-104">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="b2358-104">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="b2358-105">有关详细信息, 请参阅 BorderIndex。</span><span class="sxs-lookup"><span data-stu-id="b2358-105">See Excel.BorderIndex for details.</span></span> <span data-ttu-id="b2358-106">只读。</span><span class="sxs-lookup"><span data-stu-id="b2358-106">Read-only.</span></span>
+      <span data-ttu-id="455af-104">指示边框的特定边的常量值。</span><span class="sxs-lookup"><span data-stu-id="455af-104">Constant value that indicates the specific side of the border.</span></span> <span data-ttu-id="455af-105">有关详细信息，请参阅 BorderIndex。</span><span class="sxs-lookup"><span data-stu-id="455af-105">See Excel.BorderIndex for details.</span></span> <span data-ttu-id="455af-106">只读。</span><span class="sxs-lookup"><span data-stu-id="455af-106">Read-only.</span></span>
 
-      <span data-ttu-id="b2358-107">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2358-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="455af-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="455af-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: sideIndex
     fullName: sideIndex
     langs:
@@ -42,12 +42,12 @@ items:
       content: 'sideIndex?: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp";'
       return:
         type:
-          - Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"
-  - uid: excel.Excel.Interfaces.RangeBorderData.style
+          - 'excel!Excel.Interfaces.RangeBorderData#sideIndex~0:complex'
+  - uid: 'excel!Excel.Interfaces.RangeBorderData#style:member'
     summary: |-
-      <span data-ttu-id="b2358-108">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="b2358-108">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="b2358-109">有关详细信息, 请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="b2358-109">See Excel.BorderLineStyle for details.</span></span>
+      <span data-ttu-id="455af-108">线条样式的常量之一，指定边框的线条样式。</span><span class="sxs-lookup"><span data-stu-id="455af-108">One of the constants of line style specifying the line style for the border.</span></span> <span data-ttu-id="455af-109">有关详细信息，请参阅 BorderLineStyle。</span><span class="sxs-lookup"><span data-stu-id="455af-109">See Excel.BorderLineStyle for details.</span></span>
 
-      <span data-ttu-id="b2358-110">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2358-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="455af-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="455af-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: style
     fullName: style
     langs:
@@ -57,12 +57,12 @@ items:
       content: 'style?: Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot";'
       return:
         type:
-          - Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"
-  - uid: excel.Excel.Interfaces.RangeBorderData.weight
+          - 'excel!Excel.Interfaces.RangeBorderData#style~0:complex'
+  - uid: 'excel!Excel.Interfaces.RangeBorderData#weight:member'
     summary: |-
-      <span data-ttu-id="b2358-111">指定区域周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="b2358-111">Specifies the weight of the border around a range.</span></span> <span data-ttu-id="b2358-112">有关详细信息, 请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="b2358-112">See Excel.BorderWeight for details.</span></span>
+      <span data-ttu-id="455af-111">指定区域周围的边框的粗细。</span><span class="sxs-lookup"><span data-stu-id="455af-111">Specifies the weight of the border around a range.</span></span> <span data-ttu-id="455af-112">有关详细信息，请参阅 BorderWeight。</span><span class="sxs-lookup"><span data-stu-id="455af-112">See Excel.BorderWeight for details.</span></span>
 
-      <span data-ttu-id="b2358-113">\[[API 集: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="b2358-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      <span data-ttu-id="455af-113">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="455af-113">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
     name: weight
     fullName: weight
     langs:
@@ -72,4 +72,32 @@ items:
       content: 'weight?: Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick";'
       return:
         type:
-          - Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick"
+          - 'excel!Excel.Interfaces.RangeBorderData#weight~0:complex'
+references:
+  - uid: 'excel!Excel.Interfaces.RangeBorderData#sideIndex~0:complex'
+    name: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"
+    fullName: Excel.BorderIndex | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"
+    spec.typeScript:
+      - uid: 'excel!Excel.BorderIndex:enum'
+        name: Excel.BorderIndex
+        fullName: Excel.BorderIndex
+      - name: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"'
+        fullName: ' | "EdgeTop" | "EdgeBottom" | "EdgeLeft" | "EdgeRight" | "InsideVertical" | "InsideHorizontal" | "DiagonalDown" | "DiagonalUp"'
+  - uid: 'excel!Excel.Interfaces.RangeBorderData#style~0:complex'
+    name: Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"
+    fullName: Excel.BorderLineStyle | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"
+    spec.typeScript:
+      - uid: 'excel!Excel.BorderLineStyle:enum'
+        name: Excel.BorderLineStyle
+        fullName: Excel.BorderLineStyle
+      - name: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"'
+        fullName: ' | "None" | "Continuous" | "Dash" | "DashDot" | "DashDotDot" | "Dot" | "Double" | "SlantDashDot"'
+  - uid: 'excel!Excel.Interfaces.RangeBorderData#weight~0:complex'
+    name: Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick"
+    fullName: Excel.BorderWeight | "Hairline" | "Thin" | "Medium" | "Thick"
+    spec.typeScript:
+      - uid: 'excel!Excel.BorderWeight:enum'
+        name: Excel.BorderWeight
+        fullName: Excel.BorderWeight
+      - name: ' | "Hairline" | "Thin" | "Medium" | "Thick"'
+        fullName: ' | "Hairline" | "Thin" | "Medium" | "Thick"'
